[REPORT] Removed citation

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -317,7 +317,7 @@ Ho capito quindi che sarebbe servito un pattern che creasse i diversi tipi di Wa
 
 \begin{figure}[H]
 \centering{}
-\includegraphics[width=\textwidth]{img/PowerUpUML}
+% \includegraphics[width=\textwidth]{img/PowerUpUML}
 \caption{Rappresentazione UML dell'applicazione del pattern Factory e Strategy ai PowerUp}
 \label{img:observer}
 \end{figure}
@@ -456,5 +456,4 @@ I comandi di gioco sono i seguenti:
 
 \bibliographystyle{alpha}
 \bibliography{13-template}
-
 \end{document}
