[REPORT] Change package names

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -561,11 +561,11 @@ Abbiamo deciso di utilizzare il DVCS con il semplice approccio spiegato in class
 \subsection*{Nicolò D'Addabbo}
 In autonomia mi sono occupato di:
 \begin{itemize}
-\item Input Component (in t2sgame.core.components)
+\item Input Component (in t2sgame.game.ecs.impl)
 \item Gestione degli input da periferica (package t2sgame.input)
 \item AI (package t2sgame.input)
 \item Comandi di gioco (package t2sgame.input)
-\item Gestione degli eventi (Event ed EventFactory in t2sgame.logics e metodi notifyEvent e handleEvent in World)
+\item Gestione degli eventi (Event ed EventFactory in t2sgame.game.logics e metodi notifyEvent e handleEvent in World)
 \end{itemize}
 
 \section{Note di sviluppo}
