--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -67,31 +67,25 @@ Con survival shoot ‘em up si intende un genere di videogioco nella quale l’o
 \end{itemize}
 \newpage
 \section{Analisi e modello del dominio}
-T2S mette a disposizione del giocatore la possibilità di giocare una nuova partita.
-\\
-Una partita gestisce il proprio stato e il mondo di gioco di T2S.
+T2S mette a disposizione del giocatore la possibilità di giocare una nuova partita, che gestirà lo stato e il mondo di gioco.
 \\
 Il mondo di T2S è l’arena dove le diverse entità interagiscono fra di loro.
 \\
-Al giocatore sarà data la possibilità di controllare una di queste entità, il quale sarà l’avatar del giocatore nella partita.
+Al giocatore sarà data la possibilità di controllare una di queste entità che rappresenterà il giocatore all’interno della partita.
 \\
-Durante lo svolgimento della partita verranno generate delle ondate di entità controllate da un’intelligenza artificiale con il compito di attaccare e uccidere l’avatar del giocatore.
-\\
-Per combattere questi nemici, l’avatar avrà la possibilità di sparare dei proiettili che possono essere migliorati tramite potenziamenti.
-\\
-Una volta sconfitta un’ondata viene aggiornato lo stato della partita incrementando il numero di round alla quale si è sopravvissuti e viene generata una nuova ondata di maggiore difficoltà.
-\\
+Durante lo svolgimento della partita verranno generate delle ondate di entità controllate da un’intelligenza artificiale con il compito di attaccare e uccidere il giocatore.
+Per combattere questi nemici, il giocatore avrà la possibilità di sparare dei proiettili e di ottenere diversi tipi di power up, durante round prestabiliti e continui, 
+che renderanno il più semplice sconfiggere tutti i nemici che gli si porranno avanti.
+Una volta sconfitta un’ondata viene aggiornato lo stato della partita incrementando il numero di round alla quale si è sopravvissuti 
+e generandone una nuova di maggiore difficoltà.
 All’inizio della partita all’avatar verranno assegnati dei proiettili di default e un determinato numero di punti vita.
-\\
-Una volta subito un danno, a seconda della sua entità, verrà detratta una certa quantità dalla vita corrente.
-\\
-La partita termina quando il giocatore ha perso tutti i suoi punti vita.
-\\
+Una volta subito un danno, a seconda della sua entità, verrà detratta una certa quantità dalla vita corrente, una volta persa tutta il gioco terminerà mostrando 
+al giocatore per quanto è sopravvissuto.
 Le difficoltà che il progetto si porta dietro sono:
 \begin{itemize}
-	\item Un’implementazione di un intelligenza artificiale in grado di controllare correttamente i nemici. La prima versione del gioco fornirà ai nemici un Controller basato sulle coordinate del player nella mappa. 
+	\item Un’implementazione di un intelligenza artificiale in grado di controllare correttamente i nemici.
+	La prima versione del gioco fornirà ai nemici un Controller basato sulle coordinate del player nella mappa.
 	\item Una grafica completa che verrà implementata inizialmente in maniera minimale.
-
 \end{itemize}
 
 \begin{figure}[H]
@@ -108,50 +102,39 @@ Le difficoltà che il progetto si porta dietro sono:
 \section{Architettura}
 T2S è stato sviluppato adottando un pattern architetturale che mantenesse una simile struttura MVC, quindi con i suoi vantaggi, contaminandola però attraverso l’utilizzo del pattern Component.
 \\
-Il pattern Component permette ad una singola entità di estendersi su domini multipli senza accorparli in unica classe.
+Il pattern Component permette a una singola entità di estendersi su domini multipli senza accorparli in unica classe.
 \\
-Applicandolo al dominio dell’applicazione (Model), avremo che ogni entità risulta essere un GameObject.
-\\
-Tale GameObject viene adornato con dei GameComponent, ognuno dei quali appartiene ad un dominio (Input,Fisica,Stato,Grafica …) particolare.
-\\
-Ogni GameComponent è responsabile per l’aggiornamento del GameObject nel rispettivo dominio.
-\\
-Tuttavia, pur appartenendo a domini diversi, i diversi GameComponents potrebbero aver bisogno di comunicare tra di loro.
-\\
-Sfruttando come “container” il GameObject stesso è stato messo a disposizione dei GameComponents un semplice ma funzionale sistema di messaggistica.
-\\
+Applicandolo al dominio dell’applicazione (Model), avremo che ogni entità risulta essere un entità di gioco denominata Entity.
+Tale Entity verrà adornato da dei Component, ognuno dei quali appartiene a un dominio particolare (Input, Fisica, Grafica, …), che è sarà responsabile dell’aggiornamento del dominio all’interno dell’Entity.
+Tuttavia, pur appartenendo a domini diversi, i diversi componenti potrebbero aver bisogno di comunicare tra di loro.
+Sfruttando come “container” l’Entity stesso è stato messo a disposizione ai Components un semplice ma funzionale sistema di messaggistica.
 L’utilizzo di questi componenti porta ad importanti vantaggi:
 \begin{itemize}
 	\item \textbf{Stroncamento di un albero di ereditarietà troppo complesso e lungo}:
 	Per rappresentare entità con diversi comportamenti si utilizza la composizione di GameComponent che implementino quei comportamenti, senza nessun utilizzo dell’ereditarietà.
 	%
-	\item Eliminazione del problema \textbf{Deadly Diamond of Death}
+	\item Eliminazione dei problemi legati all’ereditarietà multipla
 	%
 	\item \textbf{Riduzione al minimo delle ripetizioni di codice} dovuto alla creazione di componenti altamente riutilizzabili
 \end{itemize}
 Dal punto di vista del pattern architetturale Model-View-Controller, i rispettivi moduli sono rappresentati da:
 \begin{itemize}
 	\item \textbf{Model}:
-	Viene seguito il seguente mantra “Everything is a GameObject”		
-Difatti ogni entità del dominio viene rappresentata e astratta grazie all’utilizzo 	dell’interfaccia GameObject, la quale svolge il ruolo di “container” di GameComponents.
-	%
+	Viene seguito il seguente mantra “Everything is a Entity”	
+Difatti ogni entità del dominio viene rappresentata e astratta grazie all’utilizzo 	dell’interfaccia Entity, la quale svolge il ruolo di “container” di Component.
 	\item \textbf{Controller}:
- Questo ruolo viene affidato all’interfaccia GameEngine, la quale ha il compito di gestire l’aggiornamento di ogni GameObject e dei suoi componenti e la renderizzazione sulla View.
-	%
+	Questo ruolo viene affidato all’interfaccia GameEngine, la quale ha il compito di gestire l’aggiornamento di ogni Entity, dei suoi componenti e della sua renderizzazione sulla View.
 	\item \textbf{View}:
- Il ruolo della view viene demandato a due interfacce ben connesse tra di loro: Scene  e Graphics.
-L’interfaccia Scene astrae il concetto di “Scena” di gioco
-L’interfaccia Graphics ha il compito di saper “disegnare” i diversi GameObjects con la 
-tecnologia grafica dipesa dall’implementazione e fornita dall'implementazione di Scene.
+	Il ruolo della view viene demandato a delle interfacce ben connesse tra di loro: GameScene e Graphics.
+	L’interfaccia GameScene astrae il concetto di “Scena” di gioco
+	L’interfaccia Graphics ha il compito di saper “disegnare” le diverse entità con la 
+	tecnologia grafica che si è scelto di utilizzare.
 \end{itemize}
-Dal diagramma delle classi, qui sotto fornito, è possibile notare un elemento di differenza rispetto ad una classica architettura MVC: un componente di spicco,denominato GraphicsComponent, risulta avere dei riferimenti alla parte di view e di model, creando un collegamento che a prima vista potrebbe risultare problematico.
-%
+Dal diagramma delle classi, qui sotto fornito, è possibile notare un elemento di differenza rispetto a una classica architettura MVC: un componente di spicco, denominato GraphicsComponent, risulta avere dei riferimenti alla parte di view e di model, creando un collegamento che a prima vista potrebbe risultare problematico.
 La modularità di M.V.C. non viene però attaccata: volendo, come esempio, cambiare la tecnologia di sviluppo per quanto riguarda la grafica si modificherà esclusivamente la parte di View dell'applicazione, senza ripercussioni in nessun altro modulo del programma.
-%
-L’ipotetico passaggio da JavaFx e Swing, dunque, non risulta essere problematico: 
-%
-si dovranno sostituire le implementazioni di JavaFx delle interfacce Graphics e Scene con delle nuove implementazioni che utilizzino Swing.
-
+L’ipotetico passaggio da JavaFX a Swing o ad altre tecnologie, dunque, non risulta essere problematico: 
+si dovranno sostituire le implementazioni di JavaFX delle interfacce Graphics, GameScenecon delle nuove implementazioni che utilizzino la nuova tecnologia.
+	
 \begin{figure}[H]
 \centering{}
 \includegraphics[width=1\textwidth]{img/SoftwareArchitectureUML.pdf}
