[REPORT] Fixed grammar

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -570,11 +570,11 @@ Il seguente è solo un esempio:
 \\
 \url{https://github.com/nicolodaddabbo/OOP22-t2s-game/blob/6dc6e41a127a2c02e07ca14e6265c07ac3afeeb1/src/main/java/it/unibo/t2sgame/core/engine/impl/GameEngineImpl.java#L115-L119}
 
-\subsection*{Creazione di interfacce funzionali}
+\subsubsection*{title}*{Creazione di interfacce funzionali}
 Esempio di una classe funzionale utilizzata per incapsulare messaggi tra componenti:
 \\
 \url{https://github.com/nicolodaddabbo/OOP22-t2s-game/blob/a2aae31b62e6f41b9cc2d0ee80a388e56f2b42db/src/main/java/it/unibo/t2sgame/game/ecs/api/Message.java#L3-L15}
-\subsection*{Utilizzo di Lambda e Method references}
+\subsubsection*{Utilizzo di Lambda e Method references}
 Sono numerosi gli utilizzi di lambda e method references. In seguito alcuni esempi: 
 \\
 \url{https://github.com/nicolodaddabbo/OOP22-t2s-game/blob/6dc6e41a127a2c02e07ca14e6265c07ac3afeeb1/src/main/java/it/unibo/t2sgame/core/engine/impl/GameEngineImpl.java#L145-L155}
