[REPORT] Added Andrea Cecchini Parte fatta di lavoro

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -541,7 +541,23 @@ La suddivisione iniziale del processo è stata fatta in maniera adeguata, consen
 \\
 Abbiamo deciso di utilizzare il DVCS con il semplice approccio spiegato in classe, difatti dopo la creazione del repository ognuno di noi ne ha fatto un clone per lavorarci in autonomia condividendo le aggiunte mediante pull e push.
 
-
+\subsection*{Cecchini Andrea}
+In autonomia mi sono occupati di:
+\begin{itemize}
+	\item GameEngine e GameLoop (package t2sgame.core.engine)
+	\item Implementazione del gioco (package t2sgame.game)
+	\item Implementazione del mondo di gioco (package t2sgame.game.model)
+	\item Implementazione della logica di gioco (package t2sgame.game.logics)
+\end{itemize}
+In collaborazione mi sono occupato:
+\begin{itemize}
+	\item Con Leonardo Magnani:
+		\begin{itemize}
+			\item Gestione delle collisioni: mi sono occupato di trovare un modo flessibile e mantenibile per gestire la collisione fra forme di tipo diverso.
+			\item Gestione dei componenti.
+			\item Gestione della messagistica.
+		\end{itemize}
+\end{itemize}
 \subsection*{Nicolò D'Addabbo}
 In autonomia mi sono occupato di:
 \begin{itemize}
